RESOLVED FIXED301528
REGRESSION(300109@main): Cookie partitioning with 3p cookie blocking not supported by WebKitTestRunner
https://bugs.webkit.org/show_bug.cgi?id=301528
Summary REGRESSION(300109@main): Cookie partitioning with 3p cookie blocking not supp...
Matthew Finkel
Reported 2025-10-27 13:34:43 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-27 13:34:50 PDT
Matthew Finkel
Comment 2 2025-10-27 13:41:56 PDT
EWS
Comment 3 2025-11-05 13:58:15 PST
Committed 302605@main (e87c97504475): <https://commits.webkit.org/302605@main> Reviewed commits have been landed. Closing PR #53041 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.