REGRESSION(300109@main): Cookie partitioning with 3p cookie blocking not supported by WebKitTestRunner https://bugs.webkit.org/show_bug.cgi?id=301528 rdar://163509455

Reviewed by Alex Christensen.

300109@main made a substantial change to how the TestRunner API is exposed to
LayoutTest web content, unfortunately there was a small mistake when
translating the C++ into JavaScript where `OnSitesWithoutUserInteraction` is
used when either of the two parameters `onlyOnSitesWithoutUserInteraction` or
`onlyUnpartitionedCookies` are true. The C++ implementation only set
`OnSitesWithoutUserInteraction` when the `onlyOnSitesWithoutUserInteraction`
parameter was true. This patch re-aligns
testRunner.setStatisticsShouldBlockThirdPartyCookies with the previous
behavior.

* Tools/WebKitTestRunner/TestController.cpp:

Canonical link: https://commits.webkit.org/302605@main